# lg-desktop

./: .gitignore  LICENSE  README.ja.md  README.md
skills/lg-desktop/: Cargo.toml  SKILL.md
skills/lg-desktop/docker/: Dockerfile  docker-compose.yml  i3-config  start-desktop.sh
skills/lg-desktop/docker/recipes/: README.md
skills/lg-desktop/scripts/: health-check.sh
skills/lg-desktop/src/: grid.rs  inspect.rs
