[package]
name = "lg-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gyumaruya/lg-desktop"
rust-version = "1.85"

[[bin]]
name = "lg-inspect"
path = "src/inspect.rs"

[[bin]]
name = "lg-grid"
path = "src/grid.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
sha2 = "0.10"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
doc_markdown = "allow"
